# cvsuite

./: .gitignore  LICENSE  install.sh  pyproject.toml
cvsuite/structures/: ops.py
cvsuite/utils/: comm.py  constants.py  io.py  logging.py
cvsuite/visualize/: coco_eval.py  utils.py
